fea: reactive updates