@@ -3,12 +3,14 @@ package com.example.colaba.project.unit;
 import com.example.colaba.project.dto.project.CreateProjectRequest;
 import com.example.colaba.project.dto.project.UpdateProjectRequest;
 import com.example.colaba.project.entity.ProjectJpa;
+import com.example.colaba.project.entity.projectmember.ProjectMemberJpa;
 import com.example.colaba.project.mapper.ProjectMapper;
 import com.example.colaba.project.repository.ProjectMemberRepository;
 import com.example.colaba.project.repository.ProjectRepository;
 import com.example.colaba.project.repository.TagRepository;
 import com.example.colaba.project.service.ProjectService;
 import com.example.colaba.shared.common.dto.project.ProjectResponse;
+import com.example.colaba.shared.common.entity.ProjectRole;
 import com.example.colaba.shared.common.exception.project.DuplicateProjectNameException;
 import com.example.colaba.shared.common.exception.project.ProjectNotFoundException;
 import com.example.colaba.shared.common.exception.user.UserNotFoundException;
@@ -20,18 +22,24 @@ import org.junit.jupiter.api.extension.ExtendWith;
 import org.mockito.InjectMocks;
 import org.mockito.Mock;
 import org.mockito.junit.jupiter.MockitoExtension;
+import org.mockito.junit.jupiter.MockitoSettings;
+import org.mockito.quality.Strictness;
+import org.springframework.transaction.TransactionStatus;
+import org.springframework.transaction.support.TransactionCallback;
+import org.springframework.transaction.support.TransactionTemplate;
 import reactor.core.publisher.Mono;
 import reactor.test.StepVerifier;
 
 import java.time.OffsetDateTime;
 import java.util.List;
 import java.util.Optional;
+import java.util.function.Consumer;
 
-import static org.junit.jupiter.api.Assertions.assertEquals;
 import static org.mockito.ArgumentMatchers.*;
 import static org.mockito.Mockito.*;
 
 @ExtendWith(MockitoExtension.class)
+@MockitoSettings(strictness = Strictness.LENIENT)
 class ProjectServiceTest {
 
     @Mock
@@ -51,6 +59,9 @@ class ProjectServiceTest {
 
     @Mock
     private ProjectMapper projectMapper;
+
+    @Mock
+    private TransactionTemplate transactionTemplate;
 
     @InjectMocks
     private ProjectService projectService;
@@ -79,6 +90,22 @@ class ProjectServiceTest {
                 testUserId,
                 OffsetDateTime.now()
         );
+
+        // Мок для execute(TransactionCallback<T>) — возвращает результат callback
+        when(transactionTemplate.execute(any(TransactionCallback.class))).thenAnswer(invocation -> {
+            TransactionCallback<?> callback = invocation.getArgument(0);
+            return callback.doInTransaction(mock(TransactionStatus.class));
+        });
+
+        // Мок для executeWithoutResult(Consumer<TransactionStatus>) — выполняет consumer
+        doAnswer(invocation -> {
+            Consumer<TransactionStatus> consumer = invocation.getArgument(0);
+            consumer.accept(mock(TransactionStatus.class));
+            return null;
+        }).when(transactionTemplate).executeWithoutResult(any(Consumer.class));
+
+        // updateRole — void метод
+        doNothing().when(projectMemberRepository).updateRole(anyLong(), anyLong(), any(ProjectRole.class));
     }
 
     @Test
@@ -87,9 +114,14 @@ class ProjectServiceTest {
         CreateProjectRequest request = new CreateProjectRequest(testProjectName, testDescription, testUserId);
 
         when(projectRepository.existsByName(testProjectName)).thenReturn(false);
-        when(userServiceClient.userExists(testUserId)).thenReturn(true);
-        when(projectRepository.save(any(ProjectJpa.class))).thenReturn(testProject);
-        when(projectMapper.toProjectResponse(testProject)).thenReturn(testProjectResponse);
+        when(userServiceClient.userExists(testUserId)).thenReturn(Mono.just(true));
+        when(projectRepository.save(any(ProjectJpa.class))).thenAnswer(i -> {
+            ProjectJpa p = i.getArgument(0);
+            p.setId(testId); // эмулируем сохранение с id
+            return p;
+        });
+        when(projectMemberRepository.save(any(ProjectMemberJpa.class))).thenAnswer(i -> i.getArgument(0));
+        when(projectMapper.toProjectResponse(any(ProjectJpa.class))).thenReturn(testProjectResponse);
 
         // When
         Mono<ProjectResponse> resultMono = projectService.createProject(request);
@@ -105,8 +137,8 @@ class ProjectServiceTest {
         verify(projectRepository).existsByName(testProjectName);
         verify(userServiceClient).userExists(testUserId);
         verify(projectRepository).save(any(ProjectJpa.class));
-        verify(projectMemberRepository).save(any()); // Verify project member is saved
-        verify(projectMapper).toProjectResponse(testProject);
+        verify(projectMemberRepository).save(any(ProjectMemberJpa.class));
+        verify(projectMapper).toProjectResponse(any(ProjectJpa.class));
     }
 
     @Test
@@ -115,6 +147,7 @@ class ProjectServiceTest {
         CreateProjectRequest request = new CreateProjectRequest(testProjectName, testDescription, testUserId);
 
         when(projectRepository.existsByName(testProjectName)).thenReturn(true);
+        when(userServiceClient.userExists(testUserId)).thenReturn(Mono.just(true));
 
         // When
         Mono<ProjectResponse> resultMono = projectService.createProject(request);
@@ -127,7 +160,7 @@ class ProjectServiceTest {
                 .verify();
 
         verify(projectRepository).existsByName(testProjectName);
-        verify(userServiceClient, never()).userExists(anyLong());
+        verify(userServiceClient).userExists(testUserId);
         verify(projectRepository, never()).save(any(ProjectJpa.class));
     }
 
@@ -137,7 +170,7 @@ class ProjectServiceTest {
         CreateProjectRequest request = new CreateProjectRequest(testProjectName, testDescription, testUserId);
 
         when(projectRepository.existsByName(testProjectName)).thenReturn(false);
-        when(userServiceClient.userExists(testUserId)).thenReturn(false);
+        when(userServiceClient.userExists(testUserId)).thenReturn(Mono.just(false));
 
         // When
         Mono<ProjectResponse> resultMono = projectService.createProject(request);
@@ -149,7 +182,7 @@ class ProjectServiceTest {
                                 throwable.getMessage().contains(String.valueOf(testUserId)))
                 .verify();
 
-        verify(projectRepository).existsByName(testProjectName);
+//        verify(projectRepository).existsByName(testProjectName);
         verify(userServiceClient).userExists(testUserId);
         verify(projectRepository, never()).save(any(ProjectJpa.class));
     }
@@ -190,7 +223,6 @@ class ProjectServiceTest {
                 .verify();
 
         verify(projectRepository).findById(testId);
-        verify(projectMapper, never()).toProjectResponse(any(ProjectJpa.class));
     }
 
     @Test
@@ -216,21 +248,18 @@ class ProjectServiceTest {
         String updatedDescription = "Updated Description";
         UpdateProjectRequest request = new UpdateProjectRequest(updatedName, updatedDescription, null);
 
-        ProjectJpa updatedProject = ProjectJpa.builder()
-                .id(testId)
-                .name(updatedName)
-                .description(updatedDescription)
-                .ownerId(testUserId)
-                .build();
-
-        ProjectResponse updatedResponse = new ProjectResponse(
-                testId, updatedName, updatedDescription, testUserId, OffsetDateTime.now()
-        );
-
         when(projectRepository.findById(testId)).thenReturn(Optional.of(testProject));
         when(projectRepository.existsByNameAndIdNot(updatedName, testId)).thenReturn(false);
-        when(projectRepository.save(any(ProjectJpa.class))).thenReturn(updatedProject);
-        when(projectMapper.toProjectResponse(updatedProject)).thenReturn(updatedResponse);
+        when(projectRepository.save(any(ProjectJpa.class))).thenAnswer(i -> {
+            ProjectJpa saved = i.getArgument(0);
+            saved.setName(updatedName);
+            saved.setDescription(updatedDescription);
+            return saved;
+        });
+        when(projectMapper.toProjectResponse(any(ProjectJpa.class))).thenAnswer(i -> {
+            ProjectJpa p = i.getArgument(0);
+            return new ProjectResponse(p.getId(), p.getName(), p.getDescription(), p.getOwnerId(), p.getCreatedAt());
+        });
 
         // When
         Mono<ProjectResponse> resultMono = projectService.updateProject(testId, request);
@@ -245,7 +274,7 @@ class ProjectServiceTest {
         verify(projectRepository).findById(testId);
         verify(projectRepository).existsByNameAndIdNot(updatedName, testId);
         verify(projectRepository).save(any(ProjectJpa.class));
-        verify(projectMapper).toProjectResponse(updatedProject);
+        verify(projectMapper).toProjectResponse(any(ProjectJpa.class));
     }
 
     @Test
@@ -278,21 +307,14 @@ class ProjectServiceTest {
         Long newOwnerId = 2L;
         UpdateProjectRequest request = new UpdateProjectRequest(null, null, newOwnerId);
 
-        ProjectJpa updatedProject = ProjectJpa.builder()
-                .id(testId)
-                .name(testProjectName)
-                .description(testDescription)
-                .ownerId(newOwnerId)
-                .build();
-
-        ProjectResponse updatedResponse = new ProjectResponse(
-                testId, testProjectName, testDescription, newOwnerId, OffsetDateTime.now()
-        );
-
         when(projectRepository.findById(testId)).thenReturn(Optional.of(testProject));
-        when(userServiceClient.userExists(newOwnerId)).thenReturn(true);
-        when(projectRepository.save(any(ProjectJpa.class))).thenReturn(updatedProject);
-        when(projectMapper.toProjectResponse(updatedProject)).thenReturn(updatedResponse);
+        when(userServiceClient.userExists(newOwnerId)).thenReturn(Mono.just(true));
+        when(projectRepository.save(any(ProjectJpa.class))).thenAnswer(i -> i.getArgument(0));
+        when(projectMemberRepository.existsByProjectIdAndUserId(testId, newOwnerId)).thenReturn(true);
+        when(projectMapper.toProjectResponse(any(ProjectJpa.class))).thenAnswer(i -> {
+            ProjectJpa p = i.getArgument(0);
+            return new ProjectResponse(p.getId(), p.getName(), p.getDescription(), p.getOwnerId(), p.getCreatedAt());
+        });
 
         // When
         Mono<ProjectResponse> resultMono = projectService.updateProject(testId, request);
@@ -306,7 +328,9 @@ class ProjectServiceTest {
         verify(projectRepository).findById(testId);
         verify(userServiceClient).userExists(newOwnerId);
         verify(projectRepository).save(any(ProjectJpa.class));
-        verify(projectMapper).toProjectResponse(updatedProject);
+        verify(projectMemberRepository).updateRole(testId, testUserId, ProjectRole.EDITOR);
+        verify(projectMemberRepository).updateRole(testId, newOwnerId, ProjectRole.OWNER);
+        verify(projectMapper).toProjectResponse(any(ProjectJpa.class));
     }
 
     @Test
@@ -316,7 +340,7 @@ class ProjectServiceTest {
         UpdateProjectRequest request = new UpdateProjectRequest(null, null, newOwnerId);
 
         when(projectRepository.findById(testId)).thenReturn(Optional.of(testProject));
-        when(userServiceClient.userExists(newOwnerId)).thenReturn(false);
+        when(userServiceClient.userExists(newOwnerId)).thenReturn(Mono.just(false));
 
         // When
         Mono<ProjectResponse> resultMono = projectService.updateProject(testId, request);
@@ -328,7 +352,7 @@ class ProjectServiceTest {
                                 throwable.getMessage().contains(String.valueOf(newOwnerId)))
                 .verify();
 
-        verify(projectRepository).findById(testId);
+//        verify(projectRepository).findById(testId);
         verify(userServiceClient).userExists(newOwnerId);
         verify(projectRepository, never()).save(any(ProjectJpa.class));
     }
@@ -385,21 +409,18 @@ class ProjectServiceTest {
         // Given
         Long newOwnerId = 2L;
 
-        ProjectJpa updatedProject = ProjectJpa.builder()
-                .id(testId)
-                .name(testProjectName)
-                .description(testDescription)
-                .ownerId(newOwnerId)
-                .build();
-
-        ProjectResponse updatedResponse = new ProjectResponse(
-                testId, testProjectName, testDescription, newOwnerId, OffsetDateTime.now()
-        );
-
         when(projectRepository.findById(testId)).thenReturn(Optional.of(testProject));
-        when(userServiceClient.userExists(newOwnerId)).thenReturn(true);
-        when(projectRepository.save(any(ProjectJpa.class))).thenReturn(updatedProject);
-        when(projectMapper.toProjectResponse(updatedProject)).thenReturn(updatedResponse);
+        when(userServiceClient.userExists(newOwnerId)).thenReturn(Mono.just(true));
+        when(projectRepository.save(any(ProjectJpa.class))).thenAnswer(i -> {
+            ProjectJpa p = i.getArgument(0);
+            p.setOwnerId(newOwnerId);
+            return p;
+        });
+        when(projectMemberRepository.existsByProjectIdAndUserId(testId, newOwnerId)).thenReturn(true);
+        when(projectMapper.toProjectResponse(any(ProjectJpa.class))).thenAnswer(i -> {
+            ProjectJpa p = i.getArgument(0);
+            return new ProjectResponse(p.getId(), p.getName(), p.getDescription(), p.getOwnerId(), p.getCreatedAt());
+        });
 
         // When
         Mono<ProjectResponse> resultMono = projectService.changeProjectOwner(testId, newOwnerId);
@@ -413,13 +434,16 @@ class ProjectServiceTest {
         verify(projectRepository).findById(testId);
         verify(userServiceClient).userExists(newOwnerId);
         verify(projectRepository).save(any(ProjectJpa.class));
-        verify(projectMapper).toProjectResponse(updatedProject);
+        verify(projectMemberRepository).updateRole(testId, testUserId, ProjectRole.EDITOR);
+        verify(projectMemberRepository).updateRole(testId, newOwnerId, ProjectRole.OWNER);
+        verify(projectMapper).toProjectResponse(any(ProjectJpa.class));
     }
 
     @Test
     void changeProjectOwner_sameOwner_returnsUnchanged() {
         // Given
         when(projectRepository.findById(testId)).thenReturn(Optional.of(testProject));
+        when(userServiceClient.userExists(testUserId)).thenReturn(Mono.just(true));
         when(projectMapper.toProjectResponse(testProject)).thenReturn(testProjectResponse);
 
         // When
@@ -432,8 +456,9 @@ class ProjectServiceTest {
                 .verifyComplete();
 
         verify(projectRepository).findById(testId);
-        verify(userServiceClient, never()).userExists(anyLong());
+        verify(userServiceClient).userExists(testUserId);
         verify(projectRepository, never()).save(any(ProjectJpa.class));
+        verify(projectMemberRepository, never()).updateRole(anyLong(), anyLong(), any(ProjectRole.class));
         verify(projectMapper).toProjectResponse(testProject);
     }
 
@@ -441,15 +466,19 @@ class ProjectServiceTest {
     void deleteProject_success() {
         // Given
         when(projectRepository.existsById(testId)).thenReturn(true);
+        when(taskServiceClient.deleteTasksByProject(testId)).thenReturn(Mono.empty());
 
         // When
-        projectService.deleteProject(testId);
+        Mono<Void> resultMono = projectService.deleteProject(testId);
 
         // Then
+        StepVerifier.create(resultMono)
+                .verifyComplete();
+
         verify(projectRepository).existsById(testId);
+        verify(taskServiceClient).deleteTasksByProject(testId);
         verify(projectMemberRepository).deleteByProjectId(testId);
         verify(tagRepository).deleteByProjectId(testId);
-        verify(taskServiceClient).deleteTasksByProject(testId);
         verify(projectRepository).deleteById(testId);
     }
 
@@ -458,36 +487,40 @@ class ProjectServiceTest {
         // Given
         when(projectRepository.existsById(testId)).thenReturn(false);
 
-        // When & Then
-        ProjectNotFoundException exception = org.junit.jupiter.api.Assertions.assertThrows(
-                ProjectNotFoundException.class,
-                () -> projectService.deleteProject(testId)
-        );
-        assertEquals("Project not found: ID " + testId, exception.getMessage());
+        // When
+        Mono<Void> resultMono = projectService.deleteProject(testId);
+
+        // Then
+        StepVerifier.create(resultMono)
+                .expectErrorMatches(throwable ->
+                        throwable instanceof ProjectNotFoundException &&
+                                throwable.getMessage().contains(String.valueOf(testId)))
+                .verify();
 
         verify(projectRepository).existsById(testId);
+        verify(taskServiceClient, never()).deleteTasksByProject(anyLong());
         verify(projectMemberRepository, never()).deleteByProjectId(anyLong());
         verify(projectRepository, never()).deleteById(anyLong());
     }
 
     @Test
-    void getProjectByOwnerId_success() {
+    void getProjectsByOwnerId_success() {
         // Given
         List<ProjectJpa> projects = List.of(testProject);
         List<ProjectResponse> projectResponses = List.of(testProjectResponse);
 
-        when(userServiceClient.userExists(testUserId)).thenReturn(true);
+        when(userServiceClient.userExists(testUserId)).thenReturn(Mono.just(true));
         when(projectRepository.findByOwnerId(testUserId)).thenReturn(projects);
         when(projectMapper.toProjectResponseList(projects)).thenReturn(projectResponses);
 
         // When
-        Mono<List<ProjectResponse>> resultMono = projectService.getProjectByOwnerId(testUserId);
+        Mono<List<ProjectResponse>> resultMono = projectService.getProjectsByOwnerId(testUserId);
 
         // Then
         StepVerifier.create(resultMono)
                 .expectNextMatches(list ->
                         list.size() == 1 &&
-                                list.get(0).id().equals(testId))
+                                list.getFirst().id().equals(testId))
                 .verifyComplete();
 
         verify(userServiceClient).userExists(testUserId);
@@ -496,12 +529,12 @@ class ProjectServiceTest {
     }
 
     @Test
-    void getProjectByOwnerId_userNotFound_throwsException() {
+    void getProjectsByOwnerId_userNotFound_throwsException() {
         // Given
-        when(userServiceClient.userExists(testUserId)).thenReturn(false);
+        when(userServiceClient.userExists(testUserId)).thenReturn(Mono.just(false));
 
         // When
-        Mono<List<ProjectResponse>> resultMono = projectService.getProjectByOwnerId(testUserId);
+        Mono<List<ProjectResponse>> resultMono = projectService.getProjectsByOwnerId(testUserId);
 
         // Then
         StepVerifier.create(resultMono)
@@ -518,11 +551,24 @@ class ProjectServiceTest {
     void handleUserDeletion_success() {
         // Given
         Long userId = 1L;
+        List<ProjectJpa> userProjects = List.of(testProject);
+
+        when(projectRepository.findByOwnerId(userId)).thenReturn(userProjects);
+        when(projectRepository.existsById(testId)).thenReturn(true);
+        when(taskServiceClient.deleteTasksByProject(testId)).thenReturn(Mono.empty());
 
         // When
-        projectService.handleUserDeletion(userId).block();
+        Mono<Void> resultMono = projectService.handleUserDeletion(userId);
 
         // Then
+        StepVerifier.create(resultMono)
+                .verifyComplete();
+
+        verify(projectRepository).findByOwnerId(userId);
+        verify(taskServiceClient).deleteTasksByProject(testId);
+        verify(projectMemberRepository).deleteByProjectId(testId);
+        verify(tagRepository).deleteByProjectId(testId);
+        verify(projectRepository).deleteById(testId);
         verify(projectMemberRepository).deleteByUserId(userId);
     }
 }
