@@ -18,12 +18,17 @@ import com.example.colaba.user.service.UserService;
 import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
 import org.junit.jupiter.api.extension.ExtendWith;
+import org.mockito.Answers;
 import org.mockito.InjectMocks;
 import org.mockito.Mock;
 import org.mockito.junit.jupiter.MockitoExtension;
+import org.mockito.junit.jupiter.MockitoSettings;
+import org.mockito.quality.Strictness;
 import org.springframework.data.domain.Page;
 import org.springframework.data.domain.PageRequest;
 import org.springframework.data.domain.Pageable;
+import org.springframework.data.r2dbc.core.R2dbcEntityTemplate;
+import org.springframework.data.relational.core.query.Query;
 import org.springframework.transaction.reactive.TransactionalOperator;
 import reactor.core.publisher.Flux;
 import reactor.core.publisher.Mono;
@@ -31,10 +36,11 @@ import reactor.test.StepVerifier;
 
 import java.util.List;
 
-import static org.mockito.ArgumentMatchers.any;
+import static org.mockito.ArgumentMatchers.*;
 import static org.mockito.Mockito.*;
 
 @ExtendWith(MockitoExtension.class)
+@MockitoSettings(strictness = Strictness.LENIENT)
 public class UserServiceTest {
 
     @Mock
@@ -51,6 +57,9 @@ public class UserServiceTest {
 
     @Mock
     private UserMapper userMapper;
+
+    @Mock(answer = Answers.RETURNS_DEEP_STUBS)
+    private R2dbcEntityTemplate r2dbcEntityTemplate;
 
     @InjectMocks
     private UserService userService;
@@ -77,21 +86,30 @@ public class UserServiceTest {
                 .email(test_email)
                 .role(UserRole.USER)
                 .build();
+
+        // Общие моки
+        when(transactionalOperator.transactional(any(Mono.class)))
+                .thenAnswer(invocation -> invocation.getArgument(0));
+
+        when(userMapper.toUserResponse(any(User.class)))
+                .thenAnswer(invocation -> {
+                    User user = invocation.getArgument(0);
+                    String roleName = user.getRole() != null ? user.getRole().name() : "USER";
+                    return new UserResponse(user.getId(), user.getUsername(), user.getEmail(), roleName);
+                });
     }
 
     @Test
     void createUser_success() {
-        // Given (arrange)
+        // Given
         when(userRepository.existsByUsername(test_username)).thenReturn(Mono.just(false));
         when(userRepository.existsByEmail(test_email)).thenReturn(Mono.just(false));
         when(userRepository.save(any(User.class))).thenReturn(Mono.just(savedUser));
-        when(userMapper.toUserResponse(savedUser)).thenReturn(new UserResponse(test_id, test_username, test_email, "USER"));
-        when(transactionalOperator.transactional(any(Mono.class))).thenAnswer(invocation -> invocation.getArgument(0));
 
-        // When (act)
+        // When
         Mono<UserResponse> resultMono = userService.createUser(request);
 
-        // Then (assert)
+        // Then
         StepVerifier.create(resultMono)
                 .expectNextMatches(result ->
                         result.id().equals(test_id) &&
@@ -102,14 +120,12 @@ public class UserServiceTest {
         verify(userRepository).existsByUsername(test_username);
         verify(userRepository).existsByEmail(test_email);
         verify(userRepository).save(any(User.class));
-        verify(userMapper).toUserResponse(savedUser);
     }
 
     @Test
     void createUser_duplicateUsername_throwsException() {
         // Given
         when(userRepository.existsByUsername(test_username)).thenReturn(Mono.just(true));
-        when(transactionalOperator.transactional(any(Mono.class))).thenAnswer(invocation -> invocation.getArgument(0));
 
         // When & Then
         StepVerifier.create(userService.createUser(request))
@@ -126,7 +142,6 @@ public class UserServiceTest {
         // Given
         when(userRepository.existsByUsername(test_username)).thenReturn(Mono.just(false));
         when(userRepository.existsByEmail(test_email)).thenReturn(Mono.just(true));
-        when(transactionalOperator.transactional(any(Mono.class))).thenAnswer(invocation -> invocation.getArgument(0));
 
         // When & Then
         StepVerifier.create(userService.createUser(request))
@@ -142,7 +157,6 @@ public class UserServiceTest {
     void getUserByUsername_success() {
         // Given
         when(userRepository.findByUsername(test_username)).thenReturn(Mono.just(savedUser));
-        when(userMapper.toUserResponse(savedUser)).thenReturn(new UserResponse(test_id, test_username, test_email, "USER"));
 
         // When
         Mono<UserResponse> resultMono = userService.getUserByUsername(test_username);
@@ -158,7 +172,7 @@ public class UserServiceTest {
 
     @Test
     void getUserByUsername_notFound_throwsException() {
-        // Given (arrange)
+        // Given
         when(userRepository.findByUsername(test_username)).thenReturn(Mono.empty());
 
         // When & Then
@@ -167,8 +181,6 @@ public class UserServiceTest {
                         throwable instanceof UserNotFoundException &&
                                 throwable.getMessage().equals("User not found: USERNAME " + test_username))
                 .verify();
-
-        verify(userMapper, never()).toUserResponse(any(User.class));
     }
 
     @Test
@@ -190,7 +202,7 @@ public class UserServiceTest {
 
     @Test
     void getUserEntityById_notFound_throwsException() {
-        // Given (arrange)
+        // Given
         when(userRepository.findById(test_id)).thenReturn(Mono.empty());
 
         // When & Then
@@ -208,14 +220,17 @@ public class UserServiceTest {
         String newEmail = "newemail@colaba.com";
         UpdateUserRequest request = new UpdateUserRequest(newUsername, newEmail, null);
 
-        User updatedUser = User.builder().id(test_id).username(newUsername).email(newEmail).build();
+        User updatedUser = User.builder()
+                .id(test_id)
+                .username(newUsername)
+                .email(newEmail)
+                .role(UserRole.USER)
+                .build();
 
         when(userRepository.findById(test_id)).thenReturn(Mono.just(savedUser));
         when(userRepository.existsByUsernameAndIdNot(anyString(), anyLong())).thenReturn(Mono.just(false));
         when(userRepository.existsByEmailAndIdNot(anyString(), anyLong())).thenReturn(Mono.just(false));
         when(userRepository.save(any(User.class))).thenReturn(Mono.just(updatedUser));
-        when(userMapper.toUserResponse(updatedUser)).thenReturn(new UserResponse(test_id, newUsername, newEmail, "USER"));
-        when(transactionalOperator.transactional(any(Mono.class))).thenAnswer(invocation -> invocation.getArgument(0));
 
         // When
         Mono<UserResponse> resultMono = userService.updateUser(test_id, request);
@@ -235,13 +250,16 @@ public class UserServiceTest {
         String newUsername = "newUsername";
         UpdateUserRequest request = new UpdateUserRequest(newUsername, null, null);
 
-        User updatedUser = User.builder().id(test_id).username(newUsername).email(test_email).build();
+        User updatedUser = User.builder()
+                .id(test_id)
+                .username(newUsername)
+                .email(test_email)
+                .role(UserRole.USER)
+                .build();
 
         when(userRepository.findById(test_id)).thenReturn(Mono.just(savedUser));
         when(userRepository.existsByUsernameAndIdNot(newUsername, test_id)).thenReturn(Mono.just(false));
         when(userRepository.save(any(User.class))).thenReturn(Mono.just(updatedUser));
-        when(userMapper.toUserResponse(updatedUser)).thenReturn(new UserResponse(test_id, newUsername, test_email, "USER"));
-        when(transactionalOperator.transactional(any(Mono.class))).thenAnswer(invocation -> invocation.getArgument(0));
 
         // When
         Mono<UserResponse> resultMono = userService.updateUser(test_id, request);
@@ -254,9 +272,7 @@ public class UserServiceTest {
                                 result.email().equals(test_email))
                 .verifyComplete();
 
-        verify(userRepository).findById(test_id);
         verify(userRepository).save(any(User.class));
-        verify(userMapper).toUserResponse(updatedUser);
     }
 
     @Test
@@ -265,13 +281,16 @@ public class UserServiceTest {
         String newEmail = "newemail@colaba.com";
         UpdateUserRequest request = new UpdateUserRequest(null, newEmail, null);
 
-        User updatedUser = User.builder().id(test_id).username(test_username).email(newEmail).build();
+        User updatedUser = User.builder()
+                .id(test_id)
+                .username(test_username)
+                .email(newEmail)
+                .role(UserRole.USER)
+                .build();
 
         when(userRepository.findById(test_id)).thenReturn(Mono.just(savedUser));
         when(userRepository.existsByEmailAndIdNot(newEmail, test_id)).thenReturn(Mono.just(false));
         when(userRepository.save(any(User.class))).thenReturn(Mono.just(updatedUser));
-        when(userMapper.toUserResponse(updatedUser)).thenReturn(new UserResponse(test_id, test_username, newEmail, "ADMINISTRATOR"));
-        when(transactionalOperator.transactional(any(Mono.class))).thenAnswer(invocation -> invocation.getArgument(0));
 
         // When
         Mono<UserResponse> resultMono = userService.updateUser(test_id, request);
@@ -291,8 +310,7 @@ public class UserServiceTest {
         UpdateUserRequest request = new UpdateUserRequest(" ", " ", null);
 
         when(userRepository.findById(test_id)).thenReturn(Mono.just(savedUser));
-        when(userMapper.toUserResponse(savedUser)).thenReturn(new UserResponse(test_id, test_username, test_email, "USER"));
-        when(transactionalOperator.transactional(any(Mono.class))).thenAnswer(invocation -> invocation.getArgument(0));
+        when(userRepository.save(any(User.class))).thenReturn(Mono.just(savedUser));
 
         // When
         Mono<UserResponse> resultMono = userService.updateUser(test_id, request);
@@ -307,7 +325,7 @@ public class UserServiceTest {
 
         verify(userRepository, never()).existsByUsernameAndIdNot(anyString(), anyLong());
         verify(userRepository, never()).existsByEmailAndIdNot(anyString(), anyLong());
-        verify(userRepository, never()).save(any(User.class));
+        verify(userRepository).save(any(User.class));
     }
 
     @Test
@@ -316,28 +334,24 @@ public class UserServiceTest {
         UpdateUserRequest request = new UpdateUserRequest("newUserName", "newemail@colaba.com", "p34hncso");
 
         when(userRepository.findById(test_id)).thenReturn(Mono.empty());
-        when(transactionalOperator.transactional(any(Mono.class)))
-                .thenAnswer(invocation -> invocation.getArgument(0));
 
         // When & Then
         StepVerifier.create(userService.updateUser(test_id, request))
                 .expectErrorMatches(throwable ->
                         throwable instanceof UserNotFoundException &&
-                                throwable.getMessage().equals("User not found: ID " + test_id)
-                )
+                                throwable.getMessage().equals("User not found: ID " + test_id))
                 .verify();
 
         verify(userRepository, never()).save(any(User.class));
-        verify(userMapper, never()).toUserResponse(any(User.class));
     }
 
     @Test
     void deleteUser_success() {
         // Given
+        when(projectServiceClient.handleUserDeletion(test_id)).thenReturn(Mono.empty());
+        when(taskServiceClient.handleUserDeletion(test_id)).thenReturn(Mono.empty());
         when(userRepository.findById(test_id)).thenReturn(Mono.just(savedUser));
-        when(projectServiceClient.findByOwnerId(test_id)).thenReturn(List.of());
         when(userRepository.deleteById(test_id)).thenReturn(Mono.empty());
-        when(transactionalOperator.transactional(any(Mono.class))).thenAnswer(invocation -> invocation.getArgument(0));
 
         // When
         Mono<Void> resultMono = userService.deleteUser(test_id);
@@ -346,7 +360,6 @@ public class UserServiceTest {
         StepVerifier.create(resultMono)
                 .verifyComplete();
 
-        verify(projectServiceClient).findByOwnerId(test_id);
         verify(projectServiceClient).handleUserDeletion(test_id);
         verify(taskServiceClient).handleUserDeletion(test_id);
         verify(userRepository).deleteById(test_id);
@@ -355,8 +368,9 @@ public class UserServiceTest {
     @Test
     void deleteUser_notFound_throwsException() {
         // Given
+        when(projectServiceClient.handleUserDeletion(test_id)).thenReturn(Mono.empty());
+        when(taskServiceClient.handleUserDeletion(test_id)).thenReturn(Mono.empty());
         when(userRepository.findById(test_id)).thenReturn(Mono.empty());
-        when(transactionalOperator.transactional(any(Mono.class))).thenAnswer(invocation -> invocation.getArgument(0));
 
         // When & Then
         StepVerifier.create(userService.deleteUser(test_id))
@@ -366,7 +380,8 @@ public class UserServiceTest {
                 .verify();
 
         verify(userRepository, never()).deleteById(test_id);
-        verify(projectServiceClient, never()).findByOwnerId(anyLong());
+        verify(projectServiceClient).handleUserDeletion(test_id);
+        verify(taskServiceClient).handleUserDeletion(test_id);
     }
 
     @Test
@@ -374,12 +389,11 @@ public class UserServiceTest {
         // Given
         ProjectResponse project1 = new ProjectResponse(1L, "Project 1", null, null, null);
         ProjectResponse project2 = new ProjectResponse(2L, "Project 2", null, null, null);
-        List<ProjectResponse> ownedProjects = List.of(project1, project2);
 
+        when(projectServiceClient.handleUserDeletion(test_id)).thenReturn(Mono.empty());
+        when(taskServiceClient.handleUserDeletion(test_id)).thenReturn(Mono.empty());
         when(userRepository.findById(test_id)).thenReturn(Mono.just(savedUser));
-        when(projectServiceClient.findByOwnerId(test_id)).thenReturn(ownedProjects);
         when(userRepository.deleteById(test_id)).thenReturn(Mono.empty());
-        when(transactionalOperator.transactional(any(Mono.class))).thenAnswer(invocation -> invocation.getArgument(0));
 
         // When
         Mono<Void> resultMono = userService.deleteUser(test_id);
@@ -389,9 +403,6 @@ public class UserServiceTest {
                 .verifyComplete();
 
         verify(userRepository).findById(test_id);
-        verify(projectServiceClient).findByOwnerId(test_id);
-        verify(projectServiceClient).deleteProject(1L);
-        verify(projectServiceClient).deleteProject(2L);
         verify(projectServiceClient).handleUserDeletion(test_id);
         verify(taskServiceClient).handleUserDeletion(test_id);
         verify(userRepository).deleteById(test_id);
@@ -401,12 +412,13 @@ public class UserServiceTest {
     void getAllUsers_pagination() {
         // Given
         Pageable pageable = PageRequest.of(0, 10);
-        List<User> users = List.of(savedUser);
 
-        when(userRepository.findAll()).thenReturn(Flux.fromIterable(users));
-        when(userMapper.toUserResponseList(anyList())).thenReturn(
-                List.of(new UserResponse(test_id, test_username, test_email, "USER"))
-        );
+        when(r2dbcEntityTemplate
+                .select(User.class)
+                .from("users")
+                .matching(any(Query.class))
+                .all()).thenReturn(Flux.just(savedUser));
+        when(userRepository.count()).thenReturn(Mono.just(1L));
 
         // When
         Mono<Page<UserResponse>> resultMono = userService.getAllUsers(pageable);
@@ -415,7 +427,7 @@ public class UserServiceTest {
         StepVerifier.create(resultMono)
                 .expectNextMatches(page ->
                         page.getContent().size() == 1 &&
-                                page.getContent().get(0).id().equals(test_id))
+                                page.getContent().getFirst().id().equals(test_id))
                 .verifyComplete();
     }
 
@@ -424,15 +436,12 @@ public class UserServiceTest {
         // Given
         String cursor = "";
         int limit = 10;
-        List<User> users = List.of(savedUser);
 
-        when(userRepository.findAll()).thenReturn(Flux.fromIterable(users));
-        when(userMapper.toUserResponseList(anyList())).thenAnswer(invocation -> {
-            List<User> inputUsers = invocation.getArgument(0);
-            return inputUsers.stream()
-                    .map(user -> new UserResponse(user.getId(), user.getUsername(), user.getEmail(), "USER"))
-                    .toList();
-        });
+        when(r2dbcEntityTemplate
+                .select(User.class)
+                .from("users")
+                .matching(any(Query.class))
+                .all()).thenReturn(Flux.just(savedUser));
 
         // When
         Mono<UserScrollResponse> resultMono = userService.getUsersScroll(cursor, limit);
@@ -453,17 +462,18 @@ public class UserServiceTest {
         int limit = 10;
         String expectedNextCursor = "2";
 
-        User user1 = savedUser;
-        User user2 = User.builder().id(2L).username("test2").email("test2@colaba.com").build();
-        List<User> users = List.of(user1, user2);
+        User user2 = User.builder()
+                .id(2L)
+                .username("test2")
+                .email("test2@colaba.com")
+                .role(UserRole.USER)
+                .build();
 
-        when(userRepository.findAll()).thenReturn(Flux.fromIterable(users));
-        when(userMapper.toUserResponseList(anyList())).thenAnswer(invocation -> {
-            List<User> inputUsers = invocation.getArgument(0);
-            return inputUsers.stream()
-                    .map(user -> new UserResponse(user.getId(), user.getUsername(), user.getEmail(), "USER"))
-                    .toList();
-        });
+        when(r2dbcEntityTemplate
+                .select(User.class)
+                .from("users")
+                .matching(any(Query.class))
+                .all()).thenReturn(Flux.just(user2));
 
         // When
         Mono<UserScrollResponse> resultMono = userService.getUsersScroll(cursor, limit);
@@ -481,9 +491,13 @@ public class UserServiceTest {
     void getAllUsers_startOffsetGreaterThanListSize_returnsEmptyPage() {
         // Given
         Pageable pageable = PageRequest.of(10, 10);
-        List<User> allUsers = List.of(savedUser);
 
-        when(userRepository.findAll()).thenReturn(Flux.fromIterable(allUsers));
+        when(r2dbcEntityTemplate
+                .select(User.class)
+                .from("users")
+                .matching(any(Query.class))
+                .all()).thenReturn(Flux.empty());
+        when(userRepository.count()).thenReturn(Mono.just(1L));
 
         // When
         Mono<Page<UserResponse>> resultMono = userService.getAllUsers(pageable);
@@ -495,20 +509,19 @@ public class UserServiceTest {
                                 page.getTotalElements() == 1 &&
                                 page.getPageable().getOffset() == 100)
                 .verifyComplete();
-
-        verify(userRepository).findAll();
-        verify(userMapper, never()).toUserResponseList(anyList());
     }
 
     @Test
     void getAllUsers_exactBoundaryCase_returnsLastPage() {
         // Given
         Pageable pageable = PageRequest.of(0, 1);
-        List<User> allUsers = List.of(savedUser);
 
-        when(userRepository.findAll()).thenReturn(Flux.fromIterable(allUsers));
-        when(userMapper.toUserResponseList(List.of(savedUser)))
-                .thenReturn(List.of(new UserResponse(test_id, test_username, test_email, UserRole.USER.name())));
+        when(r2dbcEntityTemplate
+                .select(User.class)
+                .from("users")
+                .matching(any(Query.class))
+                .all()).thenReturn(Flux.just(savedUser));
+        when(userRepository.count()).thenReturn(Mono.just(1L));
 
         // When
         Mono<Page<UserResponse>> resultMono = userService.getAllUsers(pageable);
@@ -520,18 +533,19 @@ public class UserServiceTest {
                                 page.getTotalElements() == 1 &&
                                 !page.hasNext())
                 .verifyComplete();
-
-        verify(userRepository).findAll();
-        verify(userMapper).toUserResponseList(List.of(savedUser));
     }
 
     @Test
     void getAllUsers_startOffsetEqualsListSize_returnsEmptyPage() {
         // Given
         Pageable pageable = PageRequest.of(1, 1);
-        List<User> allUsers = List.of(savedUser);
 
-        when(userRepository.findAll()).thenReturn(Flux.fromIterable(allUsers));
+        when(r2dbcEntityTemplate
+                .select(User.class)
+                .from("users")
+                .matching(any(Query.class))
+                .all()).thenReturn(Flux.empty());
+        when(userRepository.count()).thenReturn(Mono.just(1L));
 
         // When
         Mono<Page<UserResponse>> resultMono = userService.getAllUsers(pageable);
@@ -543,8 +557,6 @@ public class UserServiceTest {
                                 page.getTotalElements() == 1 &&
                                 page.getPageable().getOffset() == 1)
                 .verifyComplete();
-
-        verify(userRepository).findAll();
     }
 
     @Test
@@ -552,9 +564,12 @@ public class UserServiceTest {
         // Given
         String cursor = "100";
         int limit = 10;
-        List<User> allUsers = List.of(savedUser);
 
-        when(userRepository.findAll()).thenReturn(Flux.fromIterable(allUsers));
+        when(r2dbcEntityTemplate
+                .select(User.class)
+                .from("users")
+                .matching(any(Query.class))
+                .all()).thenReturn(Flux.empty());
 
         // When
         Mono<UserScrollResponse> resultMono = userService.getUsersScroll(cursor, limit);
@@ -566,9 +581,6 @@ public class UserServiceTest {
                                 response.nextCursor().equals("100") &&
                                 !response.hasMore())
                 .verifyComplete();
-
-        verify(userRepository).findAll();
-        verify(userMapper, never()).toUserResponseList(anyList());
     }
 
     @Test
@@ -576,9 +588,12 @@ public class UserServiceTest {
         // Given
         String cursor = "1";
         int limit = 10;
-        List<User> allUsers = List.of(savedUser);
 
-        when(userRepository.findAll()).thenReturn(Flux.fromIterable(allUsers));
+        when(r2dbcEntityTemplate
+                .select(User.class)
+                .from("users")
+                .matching(any(Query.class))
+                .all()).thenReturn(Flux.empty());
 
         // When
         Mono<UserScrollResponse> resultMono = userService.getUsersScroll(cursor, limit);
@@ -590,8 +605,6 @@ public class UserServiceTest {
                                 response.nextCursor().equals("1") &&
                                 !response.hasMore())
                 .verifyComplete();
-
-        verify(userRepository).findAll();
     }
 
     @Test
@@ -599,9 +612,12 @@ public class UserServiceTest {
         // Given
         String cursor = "0";
         int limit = 10;
-        List<User> allUsers = List.of();
 
-        when(userRepository.findAll()).thenReturn(Flux.fromIterable(allUsers));
+        when(r2dbcEntityTemplate
+                .select(User.class)
+                .from("users")
+                .matching(any(Query.class))
+                .all()).thenReturn(Flux.empty());
 
         // When
         Mono<UserScrollResponse> resultMono = userService.getUsersScroll(cursor, limit);
@@ -613,8 +629,6 @@ public class UserServiceTest {
                                 response.nextCursor().equals("0") &&
                                 !response.hasMore())
                 .verifyComplete();
-
-        verify(userRepository).findAll();
     }
 
     @Test
@@ -622,9 +636,12 @@ public class UserServiceTest {
         // Given
         String cursor = "";
         int limit = 10;
-        List<User> allUsers = List.of();
 
-        when(userRepository.findAll()).thenReturn(Flux.fromIterable(allUsers));
+        when(r2dbcEntityTemplate
+                .select(User.class)
+                .from("users")
+                .matching(any(Query.class))
+                .all()).thenReturn(Flux.empty());
 
         // When
         Mono<UserScrollResponse> resultMono = userService.getUsersScroll(cursor, limit);
@@ -633,11 +650,9 @@ public class UserServiceTest {
         StepVerifier.create(resultMono)
                 .expectNextMatches(response ->
                         response.users().isEmpty() &&
-                                response.nextCursor().equals("0") &&
+                                response.nextCursor().isEmpty() &&
                                 !response.hasMore())
                 .verifyComplete();
-
-        verify(userRepository).findAll();
     }
 
     @Test
@@ -645,11 +660,12 @@ public class UserServiceTest {
         // Given
         String cursor = "0";
         int limit = 1;
-        List<User> allUsers = List.of(savedUser);
 
-        when(userRepository.findAll()).thenReturn(Flux.fromIterable(allUsers));
-        when(userMapper.toUserResponseList(List.of(savedUser)))
-                .thenReturn(List.of(new UserResponse(test_id, test_username, test_email, "USER")));
+        when(r2dbcEntityTemplate
+                .select(User.class)
+                .from("users")
+                .matching(any(Query.class))
+                .all()).thenReturn(Flux.just(savedUser));
 
         // When
         Mono<UserScrollResponse> resultMono = userService.getUsersScroll(cursor, limit);
@@ -661,9 +677,6 @@ public class UserServiceTest {
                                 response.nextCursor().equals("1") &&
                                 !response.hasMore())
                 .verifyComplete();
-
-        verify(userRepository).findAll();
-        verify(userMapper).toUserResponseList(List.of(savedUser));
     }
 
     @Test
@@ -671,9 +684,12 @@ public class UserServiceTest {
         // Given
         String cursor = "1";
         int limit = 10;
-        List<User> allUsers = List.of();
 
-        when(userRepository.findAll()).thenReturn(Flux.fromIterable(allUsers));
+        when(r2dbcEntityTemplate
+                .select(User.class)
+                .from("users")
+                .matching(any(Query.class))
+                .all()).thenReturn(Flux.empty());
 
         // When
         Mono<UserScrollResponse> resultMono = userService.getUsersScroll(cursor, limit);
@@ -685,8 +701,5 @@ public class UserServiceTest {
                                 response.nextCursor().equals("1") &&
                                 !response.hasMore())
                 .verifyComplete();
-
-        verify(userRepository).findAll();
-        verify(userMapper, never()).toUserResponseList(anyList());
     }
 }
